@@ -677,17 +677,20 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "User:",IDC_STATIC,7,7,18,8
     EDITTEXT        IDC_USER,48,7,205,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "User SID:",IDC_STATIC,7,20,32,8
-    EDITTEXT        IDC_USERSID,48,20,205,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Session:",IDC_STATIC,7,34,28,8
-    LTEXT           "Elevated:",IDC_STATIC,85,34,32,8
-    LTEXT           "Virtualized:",IDC_STATIC,169,34,36,8
+    LTEXT           "User SID:",IDC_STATIC,7,18,32,8
+    EDITTEXT        IDC_USERSID,48,18,205,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Session:",IDC_STATIC,7,29,28,8
+    LTEXT           "Elevated:",IDC_STATIC,85,29,32,8
+    LTEXT           "Virtualized:",IDC_STATIC,169,29,36,8
     PUSHBUTTON      "Advanced",IDC_ADVANCED,203,239,50,14
-    CONTROL         "",IDC_GROUPS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,49,246,91
+    CONTROL         "",IDC_GROUPS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,56,246,84
     CONTROL         "",IDC_PRIVILEGES,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,147,246,87
-    LTEXT           "Unknown",IDC_SESSIONID,38,34,30,8
-    LTEXT           "Unknown",IDC_ELEVATED,120,34,30,8
-    LTEXT           "Unknown",IDC_VIRTUALIZED,209,34,44,8
+    LTEXT           "Unknown",IDC_SESSIONID,38,29,30,8
+    LTEXT           "Unknown",IDC_ELEVATED,120,29,30,8
+    LTEXT           "Unknown",IDC_VIRTUALIZED,209,29,44,8
+    PUSHBUTTON      "Integrity",IDC_INTEGRITY,7,239,50,14
+    LTEXT           "App container SID:",IDC_STATIC,7,40,62,8
+    EDITTEXT        IDC_APPCONTAINERSID,75,40,178,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 IDD_HEAPS DIALOGEX 0, 0, 342, 267
